libnm: handle errors gracefully in nm_access_point_connection_valid()

Suppress warnings and avoid assertions in
nm_access_point_connection_valid().

https://bugzilla.gnome.org/show_bug.cgi?id=773675